# Smart-Backpack

./: .gitignore  CMakeLists.txt  README.md  btconnection.cpp  btconnection.h  dashBoard.cpp  dashBoard.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
